# rocket_auth

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: mysql.rs  postgres.rs  redis.rs  sqlite.rs  tokio_postgres.rs
src/: cookies.rs  error.rs  lib.rs  prelude.rs  tests.rs
src/db/: mod.rs
src/db/mysql/: mod.rs
src/db/postgres/: mod.rs  sql.rs
src/db/sqlite/: mod.rs
src/db/tokio_postgres/: mod.rs
src/forms/: mod.rs
src/session/: mod.rs
src/session/default/: mod.rs
src/session/redis/: mod.rs
src/user/: auth.rs  mod.rs  user_impl.rs  users.rs
