[package]
name = "rocket_auth"
version = "0.6.1"
authors = ["tvallotton@uc.cl"]
edition = "2021"
license = "MIT or Apache-2.0"
description = "A high level authentication management library for Rocket applications. It supports both SQLite and Postgres."
repository = "https://github.com/tvallotton/rocket_auth"

readme = "README.md"
categories = ["web-programming"]
keywords = ["rocket", "users", "authentication", "auth", "session"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true


[features]
sqlx-sqlite = ["sqlx/sqlite"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql"]
redis = ["dep:redis"]
tokio-postgres = ["dep:tokio-postgres"]
rusqlite = ["dep:rusqlite"]

[dependencies.rusqlite]
version = "0.30.0"
optional = true
features = ["uuid"]


[dependencies]
rand = { version = "0.8", default-features = false }
rust-argon2 = "2.1.0"
lazy_static = "1.5.0"
regex = "1.7.3"
serde_json = "1.0"
chashmap = "2.2.2"
thiserror = "1.0.33"
async-trait = "0.1.58"
culpa = "1.0.2"
chrono = { version = "^0.4.30", default-features = false }
validator = { version = "0.16.1", features = ["derive"] }
uuid = { version = "1.10", features = ["v7", "serde"] }


[dependencies.sqlx]
version = "0.7.4"
optional = true
features = ["uuid"]


[dependencies.rocket]
version = "0.5.1"
features = ["secrets", "uuid"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio-postgres]
version = "0.7.9"
optional = true
default-features = false
features = ["with-uuid-1"]


[dependencies.redis]
version = "0.21.7"
features = ["aio", "tokio-comp"]
optional = true
default-features = false

[dependencies.tokio]
version = "1.20.6"
features = ["rt", "rt-multi-thread"]

[dev-dependencies]
tokio-postgres= "0.7.8"


[dev-dependencies.rocket]
version = "0.5.1"
features = ["secrets", "json"]

[dev-dependencies.redis]
version = "0.21.7"
features = ["aio", "tokio-comp"]


[dev-dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]


[dev-dependencies.sqlx]
version = "0.7.4"
features = ["runtime-tokio-rustls"]

[dev-dependencies.rocket_auth]
path = "../rocket_auth"
features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "redis",
    "tokio-postgres",
    "rusqlite",
]
